samples/_failures_safe/1761555643_e59152_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b40f686.c: In function ‘main’:
./samples/SAFE/__tmp_0b40f686.c:143:5: error: expected expression at end of input
  143 |     addEdge(graph, 0, 2,
      |     ^~~~~~~
./samples/SAFE/__tmp_0b40f686.c:143:5: error: expected declaration or statement at end of input
